--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,15 @@
 body{
     font-family: 'Work Sans', sans-serif;
 }
+.container{
+    width: 100%;
+}
 
 /* header styles start */
 header{
     background-color: rgba(255, 144, 14, 0.1);
     width: 100%;
+    height: 1100px;
 }
 /* nav bar styles */
 .nav{
@@ -31,14 +35,19 @@ header{
     gap: 10px;
     align-items: center;
 }    
-
-.banner-title h1{
+.banner-detail{
+    width: 600px;
+}
+.banner-title{
     color: #131313;
     font-size: 64px;
     font-weight: 700;
     text-align: center;
 }
-
+.banner-text{
+    width: 790px;
+    align-items:  center;
+}
 .banner-text p{
     color: #727272;
     font-size: 16px;
@@ -47,7 +56,7 @@ header{
 }
 
 .banner-btn{
-    width: 180px;
+    width: 160px;
     height: 64px;
     background: #FF900E;
     color: #FFFFFF;
@@ -55,13 +64,15 @@ header{
     border: #FF900E;
     font-size: 20px;
     font-weight: 600;
+    margin-top: 25px;
 
 }
 
 .banner-img img{
-    width: 1000px;
+    width: 1100px;
     height: 540px;
     border-radius: 8px;
+    margin-top: 50px;
 }
 
 /* ----------- */
@@ -70,15 +81,35 @@ header{
 /* section-1 */
 .features{
     display: flex;
+    justify-content: center;
     gap: 40px;
+    margin-top: 40px;
 }
 .features-img{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2px4;
+    gap: 15px;
+    
+}
+.features-img img{
+    width: 250px;
+    height: 250px;
 }
  .feature-detail{
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 500px;
+ }
+ .feature-btn{
+    width: 160px;
+    height: 64px;
+    background: #FF900E;
+    color: #FFFFFF;
+    border-radius: 8px;
+    border: #FF900E;
+    font-size: 20px;
+    font-weight: 600;
  }
  /* ---------- */
 
