--- a/styles/style.css
+++ b/styles/style.css
@@ -127,15 +127,47 @@ header{
     display: flex;
     justify-content: center;
     gap: 90px;
-    margin-top: 130px;
+    margin-top: 100px;
  }
  .explaining{
     width: 550px;
     height: 750px;
-    margin-top: 50px;
+    margin-top: 10px;
  }
  .exp-title{
     border-left: 5px solid #FF900E;
+ }
+ .title-exp{
+    font-size: 45px;
+    font-weight: 700;
+    color: #131313;
+ }
+ .text-exp{
+    font-size: 16px;
+    font-weight: 400;
+    color: #727272;
+ }
+ .explains{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+ }
+ .explain{
+    border: 1px  #ffffff;
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: 1px 1px 1px 1px whitesmoke;
+    
+ }
+ .explain-title{
+    font-size: 20px;
+    font-weight: 600;
+    color: #131313;
+ }
+ .explain-detail{
+    font-size: 16px;
+    font-weight: 400;
+    color: #727272;
  }
  .exp-img-btn{
     display: flex;
@@ -143,34 +175,61 @@ header{
     justify-content: center;
  }
  .exp-img img{
-    width: 550px;
-    height: 750px;
+    width: 525px;
+    height: 725px;
+ }
+ .exp-btn{
+    padding-bottom: 100px;
+    bottom: 100px;
  }
 .ex-btn{
     background-color: #FF900E;
     color: white;
     border: #FF900E;
-    width: 250px;
-    height: 150px;
+    width: 220px;
+    height: 130px;
     border-radius: 8px;
 }
 /* --------- */
 
 /* section-3 */
-
+.fact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 600px;
+    margin-bottom: 30px;
+}
+.fact h2{
+    font-size: 45px;
+    font-weight: 700;
+    color: #131313;
+}
+.fact p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #727272;
+}
 /* ---------- */
 
 /* section-4 */
 .boxes{
     display: flex;
-    gap: 70px;
     justify-content: center;
+    gap: 70px;
+    margin-top: 80px;
 }
 .box{
     box-sizing: border-box;
     width: 150px;
     height: 150px;
     border: 1px solid #FF900E;
+    border-radius: 8px; 
+}
+.box-1 img h3 p{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
 }
 /* -------- */
 
