--- a/styles/style.css
+++ b/styles/style.css
@@ -1,205 +1,190 @@
-/* import font family  */
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap');
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500&display=swap');
 
-/* utilizes styles */
+/* Common styles or utilities */
 body{
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-
-/* header styles start */
-header{
-    background-color: rgba(255, 144, 14, 0.1);
-    width: 100%;
-    height: 1100px;
+/*--------- Header Section Styles ----------*/
+.header{
+    width: 100%; 
+    /* height: 1322px; */
+    background-color: rgba(255, 144, 14, 0.1); 
 }
-/* nav bar styles */
-.nav{
+nav{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 600PX;
+    justify-content: space-between;
+    padding: 0px 150px;
 }
-
-.nav-bar ul{
-    display: flex;
-    gap: 30px;
-    list-style: none;
-}
-/* ----------- */
-
-/* banner styles */
-.heading-banner{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    align-items: center;
-}    
-.banner-detail{
-    width: 770px;
-    text-align: center;
-}
-.banner-title{
-    color: #131313;
-    font-size: 64px;
+.nav-title{
     font-weight: 700;
+    font-size: 30px;
 }
-.banner-text{
-    width: 790px;
-    margin-right: 15px;
-}
-.banner-text p{
-    color: #727272;
-    font-size: 16px;
-    font-weight: 400;
-    text-align: center;
-}
-
-.banner-btn{
-    width: 160px;
-    height: 64px;
-    background: #FF900E;
-    color: #FFFFFF;
-    border-radius: 8px;
-    border: #FF900E;
-    font-size: 20px;
-    font-weight: 600;
-    margin-top: 25px;
-
-}
-
-.banner-img img{
-    width: 1100px;
-    height: 540px;
-    border-radius: 8px;
-    margin-top: 50px;
-}
-
-/* ----------- */
-
-/* main part */
-/* section-1 */
-.features{
+nav ul{
     display: flex;
-    justify-content: center;
-    gap: 40px;
-    margin-top: 40px;
+    gap: 35px;
+    margin-top: 30px;
 }
-.features-img{
+nav li{
+    list-style: none;
+    display: flex;
+}
+
+/* ==================== Header banner start ====================== */
+.header-banner{
+     
+    margin-top: 70px;
+    padding-left: 160px; 
+    align-items: center;
+    justify-content: center;
+}
+.header-details{
+    width: 620px;
+    height: 215px;
+    /* border: 2px solid red; */
+    text-align: center;
+    margin-left: 200px;
+}
+.header-title{
+    font-weight: 700;
+    font-size: 40px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.header-des{
+    color: #727272;
+    font-weight: 100;
+}
+.btn-primary{
+    font-size: 15px;
+    font-weight: 200;
+    background: #FF900E;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    padding: 15px 20px;
+    margin-top: 10px;
+}
+.image{
+    width: 1000px;
+    height: 470px;
+    margin-top: 100px;
+    padding-bottom: 30px;
+}
+
+/* ==================== header banner end =========================== */
+
+/*-------- Main Section Styles ------------*/
+
+/* ================Quick List Section start ================= */
+.list-feature{
+    display: flex;
+    gap: 50px;
+    margin-top: 40px;
+    padding: 0px 240px;
+}
+.list-images{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    
+    grid-row-gap: 24px;
+    grid-column-gap: 24px;
 }
-.features-img img{
-    width: 250px;
-    height: 250px;
+.list-image{
+    width: 230px;
+    height: 230px;
 }
- .feature-detail{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 500px;
- }
- .feature-title{
-    font-size: 45px;
-    font-weight: 700;
- }
- .feature-text{
-    font-size: 16px;
+.list-details{
+    margin-top: 95px;
+}
+.list-title{
+    font-weight: 500;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+.list-des{
     font-weight: 400;
+    font-size: 16px;
     color: #727272;
- }
- .feature-btn{
-    width: 160px;
-    height: 64px;
-    background: #FF900E;
-    color: #FFFFFF;
-    border-radius: 8px;
-    border: #FF900E;
-    font-size: 20px;
-    font-weight: 600;
- }
- /* ---------- */
-
- /* section-2 */
- .feature-explain{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin-top: 100px;
- }
- .explaining{
-    width: 550px;
-    height: 00px;
-    margin-bottom: 50px;
- }
- .exp-title{
-    border-left: 5px solid #FF900E;
- }
- .title-exp{
-    font-size: 45px;
-    font-weight: 700;
-    color: #131313;
     margin-top: 0px;
-    margin-left: 15px; 
- }
- .text-exp{
-    font-size: 16px;
-    font-weight: 400;
-    color: #727272;
- }
- .explains{
+}
+/* ================ Quick List Section end ================= */
+
+/*=========== Feature love and enjoy start =============*/
+.features{
+    margin-top: 130px;
+    /* display: grid; */
+    /* grid-template-columns: repeat(2, 1fr); */
+    /* grid-column-gap: 20px; */
     display: flex;
-    flex-direction: column;
+    gap:100px;
     justify-content: center;
- }
- .explain{
-    border: 1px  #ffffff;
-    box-sizing: border-box;
-    border-radius: 8px;
-    box-shadow: 1px 1px 1px 1px whitesmoke;
+}
+.title-box{
+    width: 220px;
+    height: 55px;
+    border: 3px solid #FF900E;
+    border-top: 0px; 
+    border-bottom: 0px; 
+    border-right: 0px;
+}
+.side-title{
+    font-weight: 700;
+    font-size: 25px;
+    margin-top: 0px;
+    margin-left: 15px;  
+}
+.box-side-des{
+    width: 400px;
+    height: 72px;
+    /* background-color: aquamarine; */
+    padding: 10px 0px;
+    margin-bottom: 13px;
+    margin-top: 20px;
     
- }
- .explain-title{
-    font-size: 20px;
-    font-weight: 600;
-    color: #131313;
- }
- .explain-detail{
-    font-size: 16px;
-    font-weight: 400;
+}
+.side-des{
     color: #727272;
- }
- .exp-img-btn{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
- }
- .exp-img img{
-    width: 525px;
-    height: 770px;
- }
- /* .exp-btn{
-    padding-bottom: 100px;
-    bottom: 100px;
- } */
-.ex-btn{
+    margin-top: 0px;
+}
+.box{
+    width: 400px;
+    height: 72px;
+    background-color: white;
+    box-shadow: 2px 1px 30px #9f9f9f29;
+    padding: 10px 18px;
+    margin-bottom: 45px;
+}
+.box-title{
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.box-des{
+    font-weight: 100;
+    color: #727272;
+    font-size: 15px;
+}
+
+
+.right-image{
+    width: 450px;
+    height: 790px;
+}
+.btn-special{
     font-size: 15px;
     font-weight: 200;
     background: #eb7f04;
     color: white;
     border: 0;
     border-radius: 5px;
-    padding: 15px 20px;
-    margin-left: 755px;
-    margin-top: -800px;
+    padding: 7px 20px;
+    margin-left: 720px;
+    margin-top: -130px;
     margin-bottom: 20px;
 }
-/* --------- */
+/*=========== Feature love and enjoy end =============*/
 
-/* section-3 */
+/*------------ Some Fact styles start -------------*/
 .fact-detail-box{
     width: 345px;
     height: 90px;
@@ -228,8 +213,13 @@ header{
     border: 2px solid #ff900e5e;
     border-radius: 5px;
     text-align: center;
+    transition: width 1s, height 1s, transform 1s;
 }
-
+.fact-box:hover{
+            width: 115px;
+            height: 110px;
+            transform: rotate(180deg);
+}
 .icon{
     width: 24px;
     height: 24px;
@@ -245,9 +235,9 @@ header{
     color: #727272;
     margin-top: 0px;
 }
-/* ---------- */
+/*------------ Some Fact styles end -------------*/
 
-/* section-4 */
+/*--------- Our sponser style start ----------*/
 .sponser-detail-box{
     width: 370px;
     height: 90px;
@@ -271,9 +261,9 @@ header{
     width: 100px;
     height: 30px;
 }
-/* -------- */
+/*----------- Our sponser style end ----------*/
 
-/* section-5 */
+/*-------------- Extra section styles start ---------------------*/
 .contact{
     width: 400px;
     height:400px;
@@ -305,17 +295,9 @@ input{
     border: 0;
     border-radius: 5px;
 }
-/* --------- */
+/*-------------- Extra section styles end ---------------------*/
 
-/* section-6 */
-.sponsors{
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-}
-/* ------- */
-
-/* footer */
+/*------------ Footer Section Styles -----------*/
 .footer-box{
     width: 900px;
     height: 50px;
@@ -333,23 +315,59 @@ input{
 }
 
 /*----------------- Mobile Device Responsive ---------------*/
-@media only screen and (max-width: 576px){
-    
-    .container{
+@media only screen and (max-width: 688px) {
+     .header{
+         width: 100%;
+     }
+     nav,
+     .header,
+     .header-details,
+     .header-image,
+     .list-feature,
+     .container .features,     
+     .fact-boxes, .logos
+     {
+     flex-direction: column;
+     gap: 10px; 
+     padding: 10px 10px; 
+    }
+    nav ul{
+        flex-direction: column;
+        gap: 15px;
+        align-items: flex-start;
+        padding-left: 10px;
+    }
+    .header-banner{
+        padding-left: 0px;
+    }
+    .container .fact-detail-box,
+    .header-details,
+    .container .sponser-detail-box,
+    .footer-box,
+    .contact{
+        margin-left: 0px;
+        padding: 10px 10px;
+
+    }
+    .header-details,
+    .header-banner img,
+    .footer-box{
         width: 100%;
+    } 
+    .header-details{
+        margin-bottom: 70px;
     }
-    .nav{
-        display: grid;
-        gap: 3px;
+    .list-images{
+        grid-template-columns: repeat(1, 1fr);
     }
-    .nav-bar ul{
-        display: grid;
+    .btn-special{
+        margin-left: 0px;
+        margin-top: 10px;
+        padding: 10px 10px;
+        margin-left: 20px;
     }
-    .features{
-        display: grid;
-        grid-template-rows: repeat(2, 1fr);
-    }
-    .feature-explain{
-        grid-template-rows: repeat(2, 1fr);
-    }
+    .contact input[type="email"], textarea{
+     padding: 0 0 0 5px;
+ }
+
 }
